forlulario pagina de contato e css

--- a/style-incluhelp.css
+++ b/style-incluhelp.css
@@ -57,9 +57,9 @@ nav a:hover {
 .principal em {
 	font-style: italic ;
 }
-}
+
 .principal {
-		background: #CCCCCC;
+		background: #FEFEFE;
 		padding: auto;
 	}	
 
